# aeron

./: CLAUDE.md  test-gap-report.md
aeron-archive/src/main/c/server/: aeron_archive_catalog.c  aeron_archive_catalog.h  aeron_archive_conductor.c  aeron_archive_conductor.h  aeron_archive_control_session.c  aeron_archive_control_session_adapter.c  aeron_archive_recording_session.c  aeron_archive_replication_session.c  aeron_archive_server.c  aeron_archive_update_channel_session.c  aeron_archiving_media_driver.c
aeron-cluster/src/main/c/backup/: aeron_cluster_backup_agent.c  aeron_cluster_backup_agent.h  aeron_cluster_standby_snapshot_replicator.c
aeron-cluster/src/main/c/client/: aeron_cluster_async_connect.c  aeron_cluster_async_connect.h  aeron_cluster_client.c  aeron_cluster_client.h  aeron_cluster_egress_adapter.c  aeron_cluster_egress_adapter.h
aeron-cluster/src/main/c/consensus/: CMakeLists.txt  aeron_cluster_cluster_session.h  aeron_cluster_consensus_publisher.c  aeron_cluster_election.c  aeron_cluster_election.h  aeron_cluster_log_adapter.c  aeron_cluster_mark_file.c  aeron_cluster_mark_file.h  aeron_cluster_publication_group.c  aeron_cluster_publication_group.h  aeron_cluster_recording_log.c  aeron_cluster_recording_log.h  aeron_cluster_recording_replication.c  aeron_cluster_session_manager.c  aeron_cluster_timer_service.c  aeron_cm_context.c  aeron_cm_context.h  aeron_consensus_module_agent.c  aeron_consensus_module_agent.h  aeron_consensus_module_agent_fwd.h  aeron_consensus_module_configuration.h
aeron-cluster/src/test/c/: CMakeLists.txt
aeron-cluster/src/test/c/consensus/: CMakeLists.txt  aeron_mock_election_agent.h
aeron-cluster/src/test/c/consensus/consensus/: aeron_cluster_async_connect_test.cpp  aeron_cluster_authentication_test.cpp  aeron_cluster_backup_agent_test.cpp  aeron_cluster_backup_context_test.cpp  aeron_cluster_client_context_test.cpp  aeron_cluster_client_test.cpp  aeron_cluster_consensus_test.cpp  aeron_cluster_egress_adapter_test.cpp  aeron_cluster_egress_poller_test.cpp  aeron_cluster_election_test.cpp  aeron_cluster_log_source_validator_test.cpp  aeron_cluster_mark_file_test.cpp  aeron_cluster_member_test.cpp  aeron_cluster_name_resolution_test.cpp  aeron_cluster_node_restart_test.cpp  aeron_cluster_node_state_file_test.cpp  aeron_cluster_node_test.cpp  aeron_cluster_pending_message_tracker_test.cpp  aeron_cluster_publication_group_test.cpp  aeron_cluster_recording_log_test.cpp  aeron_cluster_recording_log_validator_test.cpp  aeron_cluster_recording_replication_test.cpp  aeron_cluster_service_container_context_test.cpp  aeron_cluster_service_snapshot_taker_test.cpp  aeron_cluster_session_event_codec_test.cpp  aeron_cluster_session_manager_test.cpp  aeron_cluster_snapshot_replication_test.cpp  aeron_cluster_snapshot_taker_test.cpp  aeron_cluster_standby_snapshot_replicator_test.cpp  aeron_cluster_timer_service_test.cpp  aeron_cluster_timer_test.cpp  aeron_cluster_with_no_services_test.cpp  aeron_clustered_service_agent_test.cpp  aeron_consensus_module_agent_test.cpp  aeron_consensus_module_configuration_test.cpp  aeron_consensus_module_context_test.cpp
aeron-cluster/src/test/c/integration/: aeron_cluster_appointed_leader_test.cpp  aeron_cluster_backup_test.cpp  aeron_cluster_catchup_test.cpp  aeron_cluster_echo_test.cpp  aeron_cluster_election_recovery_test.cpp  aeron_cluster_integration_test.cpp  aeron_cluster_multi_node_test.cpp  aeron_cluster_multi_service_test.cpp  aeron_cluster_network_partition_test.cpp  aeron_cluster_network_topology_test.cpp  aeron_cluster_offset_clock_test.cpp  aeron_cluster_server_helper.cpp  aeron_cluster_service_ipc_test.cpp  aeron_cluster_session_reliability_test.cpp  aeron_cluster_shutdown_close_test.cpp  aeron_cluster_single_node_test.cpp  aeron_cluster_system_multi_test.cpp  aeron_cluster_system_test.cpp  aeron_cluster_test_cluster_test.cpp  aeron_cluster_three_node_test.cpp  aeron_cluster_tool_test.cpp  aeron_cluster_truncated_log_test.cpp  aeron_cluster_uncommitted_state_test.cpp  aeron_test_cluster.cpp  aeron_test_cluster.h  aeron_test_cluster_client.cpp  aeron_test_cluster_harness_test.cpp  aeron_test_cluster_node.h  aeron_test_cluster_svc_harness_test.cpp  aeron_test_clustered_media_driver.cpp  aeron_test_clustered_media_driver.h
aeron-cluster/src/test/cpp_wrapper/: EgressPollerTest.cpp
